Bug 607854 - implement SVGTests interface. r=jwatt